tests/fixtures/negative/naming/MatchingDeclarationName.kt
package com.example.naming

// File is named MatchingDeclarationName.kt and contains class MatchingDeclarationName
class MatchingDeclarationName {
    fun doSomething() {}
}
